tests/errors/invalid-tempo-beat.typ
#import "../../src/lib.typ": score

#score(
  time: "4/4",
  tempo: (text: [Andante], beat: "quaver", bpm: 132),
  bars: (
    (notes: "c5:q d e f"),
  ),
)
